--- a/index.html
+++ b/index.html
@@ -1,13 +1,467 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
 
-    
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+  <title>Silicon | Manage All Your Money in One App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <nav class="main-nav" aria-label="main navigation">
+    <a href="#main" class="skip-link">Skip to main content</a>
+
+    <div class="container">
+      <a href="/">
+        <img src="/images/logotype.svg" alt="Silicon logotype" />
+      </a>
+
+      <div class="darkmode-toggle">
+        <p>Dark Mode</p>
+        <label class="toggle">
+          <input type="checkbox" id="darkmode-switch" />
+          <span class="slider"></span>
+        </label>
+      </div>
+
+      <button class="menu-btn" aria-controls="main-menu" aria-expanded="false" aria-label="toggle navigation">
+        <img src="/images/icons/hamburger.svg" alt="" />
+      </button>
+
+      <ul id="main-menu" class="main-menu hide">
+        <li>
+          <a href="#" class="nav-link">Features</a>
+        </li>
+        <li>
+          <a href="#" class="btn btn-primary">
+            <img src="/images/icons/user.svg" alt="" />
+            <span>Sign in / up</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <main id="main">
+    <section aria-label="showcase" class="showcase">
+      <div class="container space-y-3">
+        <h1 class="d4">Manage All Your Money in One App</h1>
+        <div class="content space-y-3">
+          <p class="text-lg">
+            We offer you a new generation of the mobile banking. Save, spend &
+            manage money in your pocket.
+          </p>
+
+          <div class="market-btns">
+            <a href="#" class="store-btn">
+              <span class="sr-only"> Download on the App Store</span>
+              <img src="/images/icons/appstore-light.svg" alt="" />
+            </a>
+            <a href="#" class="store-btn">
+              <span class="sr-only"> Get it on Google Play</span>
+              <img src="/images/icons/google-light.svg" alt="" />
+            </a>
+          </div>
+          <div class="more">
+            <a href="#features" class="btn-round btn-white">
+              <i class="fa-solid fa-chevron-down"></i>
+            </a>
+            <span> Discover more</span>
+          </div>
+        </div>
+        <div class="phone-img-container">
+          <img src="/images/iphones.svg" alt="two iphones with charts and credit card on the screen" />
+        </div>
+      </div>
+    </section>
+
+    <section aria-label="our customers" class="logos">
+      <div class="container">
+        <div class="logo-card">
+          <img src="/images/logos/logo1.svg" alt="logo1" />
+        </div>
+        <div class="logo-card">
+          <img src="/images/logos/logo2.svg" alt="logo2" />
+        </div>
+        <div class="logo-card">
+          <img src="/images/logos/logo3.svg" alt="logo3" />
+        </div>
+        <div class="logo-card">
+          <img src="/images/logos/logo4.svg" alt="logo4" />
+        </div>
+        <div class="logo-card">
+          <img src="/images/logos/logo5.svg" alt="logo5" />
+        </div>
+        <div class="logo-card">
+          <img src="/images/logos/logo6.svg" alt="logo6" />
+        </div>
+      </div>
+    </section>
+
+    <section aria-label="app features" class="features">
+      <div class="container">
+        <div class="iphone">
+          <img src="/images/iphone-features.svg" alt="iphone on features screen" />
+        </div>
+        <div class="text space-y-1">
+          <h2 class="h1">App Features</h2>
+          <p class="text-lg">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            volutpat mollis egestas. Nam luctus facilisis ultrices.
+            Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
+          </p>
+          <div class="features-grid">
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/credit-card.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Easy Payments</h3>
+                <p>
+                  Id mollis consectetur congue egestas egestas suspendisse
+                  blandit justo.
+                </p>
+              </div>
+            </div>
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/shield.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Data Security</h3>
+                <p>
+                  Augue pulvinar justo, fermentum fames aliquam accumsan
+                  vestibulum non.
+                </p>
+              </div>
+            </div>
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/charts.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Cost Statistics</h3>
+                <p>
+                  Mattis urna ultricies non amet, purus in auctor non. Odio
+                  vulputate ac nibh.
+                </p>
+              </div>
+            </div>
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/support.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Support 24/7</h3>
+                <p>
+                  A elementum, imperdiet enim, pretium etiam facilisi in
+                  aenean quam mauris.
+                </p>
+              </div>
+            </div>
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/cashback.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Regular Cashback</h3>
+                <p>
+                  Sit facilisis dolor arcu, fermentum vestibulum arcu
+                  elementum imperdiet eleifend.
+                </p>
+              </div>
+            </div>
+            <div class="feature-card">
+              <div class="icon-container">
+                <img src="/images/icons/smiley.svg" alt="" />
+              </div>
+              <div class="space-y-1">
+                <h3 class="h5">Top Standards</h3>
+                <p>
+                  Faucibus cursus maecenas lorem cursus nibh. Sociis sit
+                  risus id. Sit facilisis dolor arcu
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <section aria-label="How does it work" class="carousel-section">
+      <div class="container space-y-3">
+        <h2 class="h1">How Does It Work?</h2>
+        <div class="carousel">
+          <div class="carousel-item">
+            <img src="/images/iphone-left.svg" alt="iphone left">
+          </div>
+
+          <div class="carousel-item">
+            <img src="/images/iphone-mid.svg" alt="iphone mid">
+          </div>
+
+          <div class="carousel-item">
+            <img src="/images/iphone-right.svg" alt="iphone right">
+          </div>
+        </div>
+
+        <div class="text">
+          <h3 class="h4">Latest transaction history</h3>
+          <p> Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in
+            consectetur condimentum. </p>
+        </div>
+        <div class="text-mobile">
+          <h2 class="transfer"> Transfers to people from<br>
+            your contact list</h2>
+            <p class="mobile-subtext"> Proin volutpat mollis egestas. Nam luctus facilisis
+              ultrices. Pellentesque volutpat ligula est. Mattis
+              fermentum, at nec lacus</p>
+        </div>
+        <div class="text-tablet">
+          <h2 class="transfer"> Step 3. Transfers to people from your <br>
+            contact list</h2>
+            <p class="tablet-subtext"> Proin volutpat mollis egestas. Nam luctus facilisis ultrices. <br>
+              Pellentesque volutpat ligula est. Mattis fermentum, at nec <br>
+              lacus.</p>
+        </div>
+      </div>
+
+
+    </section>
+
+    <div class="info-container">
+      <!-- First Section -->
+      <section aria-label="Info" class="info-section">
+          <div class="text-content">
+              <h2 class="h2">Make your money transfer simple and clear</h2>
+              <ul>
+                  <li><img src="/images/icons/checkmark.svg" alt="Checkmark"> Banking transactions are free for you</li>
+                  <li><img src="/images/icons/checkmark.svg" alt="Checkmark"> No monthly cash commission</li>
+                  <li><img src="/images/icons/checkmark.svg" alt="Checkmark"> Manage payments and transactions online</li>
+              </ul>
+              <a href="#" class="button">
+                Learn more
+                <img src="/images/icons/arrow.svg" alt="Arrow icon">
+            </a>
+          </div>
+          <div class="image-content">
+              <img src="/images/money-graph.svg" alt="Graph">
+          </div>
+      </section>
+
+      <!-- Second Section -->
+      <section aria-label="Info" class="info-section">
+          <div class="image-content">
+              <img src="/images/chat-credit-card.svg" alt="Contacts">
+          </div>
+          <div class="text-content">
+              <h2 class="h2">Receive payment from international bank details</h2>
+              <div class="features">
+                  <div class="feature">
+                      <img src="/images/icons/ugly-credit-card.svg" alt="Icon">
+                      <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+                  </div>
+                  <div class="feature">
+                      <img src="/images/icons/coffee-cup-filled-with-ice.svg" alt="Icon">
+                      <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+                  </div>
+              </div>
+              <a href="#" class="button">
+                Learn more
+                <img src="/images/icons/arrow.svg" alt="Arrow icon">
+            </a>
+          </div>
+      </section>
+  </div>
+
+
+  <section aria-label="Testimonials" class="testimonials">
+    <div class="heading">
+      <h2>Clients are<br> Loving Our App</h2>
+    </div>
+    <div class="testi-container">
+      <div class="testi-card">
+        <div class="quote-icon">
+          <img src="/images/icons/quotes.svg" alt="Quote icon">
+        </div>
+        <div class="rating">
+          <img src="/images/icons/four-stars.svg" alt="4 stars" class="stars"> <!-- Use star icons here -->
+        </div>
+        <p class="testi-text">Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
+        <div class="user-info">
+          <img src="/images/icons/fannie-girl.svg" alt="Fannie Summers" class="avatar">
+          <div>
+            <h4>Fannie Summers</h4>
+            <p>Designer</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="testi-card">
+        <div class="quote-icon">
+          <img src="/images/icons/quotes.svg" alt="Quote icon">
+        </div>
+        <div class="rating">
+          <img src="/images/icons/five-stars.svg" alt="5 stars" class="stars"> <!-- Use star icons here -->
+        </div>
+        <p class="testi-text">Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
+        <div class="user-info">
+          <img src="/images/icons/albert-man.svg" alt="Albert Flores" class="avatar">
+          <div>
+            <h4>Albert Flores</h4>
+            <p>Developer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<section aria-label="FAQ" class="faq">
+
+  <div class=faq-window>
+<h2 class="faq-headline">Any questions? Check out the FAQs</h2>
+<p class="faq-mobile-subtext">Still have unanswered questions and need to get in touch?</p>
+</div>
+
+<div class="contact-grid">
+
+  <div class="contact-card">
+    <div class="contact-container">
+      <img src="/images/icons/phone-icon.svg" alt="" />
+    </div>
+    <div class="space-y-1">
+      <p>
+        Still have questions?
+        <a href="Contact Us">Contact us</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="contact-card">
+    <div class="contact-container">
+      <img src="/images/icons/whatsapp-icon.svg" alt="" />
+    </div>
+    <div class="space-y-1">
+      <p>
+        Don't like questions?
+        <a href="Contact Us">Contact us</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3"> Is any of my personal information stored in the App? </h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer"><p class="h6">Nunc duis id aenean gravida tincidunt eu, tempor
+    ullamcorper. Viverra aliquam arcu, viverra et,
+    cursus. Aliquet pretium cursus adipiscing gravida
+    et consequat lobortis arcu velit. Nibh pharetra
+    fermentum duis accumsan lectus non. Massa
+    cursus molestie lorem scelerisque pellentesque.
+    Nisi, enim, arcu purus gravida adipiscing euismod
+    montes, duis egestas. Vehicula eu etiam quam
+    tristique tincidunt suspendisse ut consequat.</p>
+    <br>
+  <p class="h6">Ornare senectus fusce dignissim ut. Integer
+    consequat in eu tortor, faucibus et lacinia
+    posuere. Turpis sit viverra lorem suspendisse
+    lacus aliquam auctor vulputate. Quis egestas
+    aliquam nunc purus lacus, elit leo elit facilisi.
+    Dignissim amet adipiscing massa integer.</p></div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3"> What formats can I download my transaction history in? </h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer"><p class="h6">Lorem ipsum dolor sit amet.</p></div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3">Can I schedule future transfers?</h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer"><p class="h6">Lorem ipsum dolor sit amet.</p></div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3">When can I use Banking App services? </h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer"><p class="h6">Lorem ipsum dolor sit amet.</p></div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3">Can I create my own password that is easy for me to remember? </h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer"><p class="h6">Lorem ipsum dolor sit amet.</p></div>
+</div>
+
+<div class="faq">
+  <div class="question">
+    <h3 class="h3"> What happens if I forget or lose my password?</h3>
+    <button class="faq-down-btn">
+      <i class="fa-solid fa-chevron-down"></i>
+    </button>
+  </div>
+  <div class="answer">
+    <p class="h6">Lorem ipsum dolor sit amet.</p>
+  </div>
+  </div>
+
+  <div class="Contact">
+    <a href="#" class="btn-contact">
+        <img src="/images/icons/contact-us-now.svg" alt="Contact us now">
+    </a>
+</div>
+
+
+<div class="Subscribe">
+  <div class="sub-bell">
+  <img src="/images/icons/subscribe-bell.svg" alt="Subscribe bell" class="bell">
+  <h class="subscribe-text">Subscribe to our newsletter</h>
+</div>
+  <div class="subscribe-form">
+    <input class="input-field" type="email" placeholder="Your email" />
+    <button class="btn-subscribe">Subscribe</button>
+</div>
+
+<script src="script.js"></script>
+</section>
+
+<section aria-label="footer" class="footer">
+    <div class="footer-legal">
+      <p class="footer">© 2024 Silicon. All rights reserved. </p>
+      <p class="footer">Credit MadrasThemes</p>
+    </div>
+  </div>
+
+  
+ 
+  
 </body>
 </html>
