--- a/index.html
+++ b/index.html
@@ -439,6 +439,32 @@
     </a>
 </div>
 
+<div class="contact-grid-tablet">
+
+  <div class="contact-card">
+    <div class="contact-container">
+      <img src="/images/icons/phone-icon.svg" alt="" />
+    </div>
+    <div class="space-y-1">
+      <p>
+        Still have questions?
+        <a href="Contact Us">Contact us</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="contact-card">
+    <div class="contact-container">
+      <img src="/images/icons/whatsapp-icon.svg" alt="" />
+    </div>
+    <div class="space-y-1">
+      <p>
+        Don't like questions?
+        <a href="Contact Us">Contact us</a>
+      </p>
+    </div>
+  </div>
+</div>
 
 <div class="Subscribe">
   <div class="sub-bell">
