--- a/index.html
+++ b/index.html
@@ -337,91 +337,92 @@
 
       
       
+      <div class="faq-accordion">
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3"> Is any of my personal information stored in the App? </h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Nunc duis id aenean gravida tincidunt eu, tempor
+              ullamcorper. Viverra aliquam arcu, viverra et,
+              cursus. Aliquet pretium cursus adipiscing gravida
+              et consequat lobortis arcu velit. Nibh pharetra
+              fermentum duis accumsan lectus non. Massa
+              cursus molestie lorem scelerisque pellentesque.
+              Nisi, enim, arcu purus gravida adipiscing euismod
+              montes, duis egestas. Vehicula eu etiam quam
+              tristique tincidunt suspendisse ut consequat.</p>
+            <br>
+            <p class="h6">Ornare senectus fusce dignissim ut. Integer
+              consequat in eu tortor, faucibus et lacinia
+              posuere. Turpis sit viverra lorem suspendisse
+              lacus aliquam auctor vulputate. Quis egestas
+              aliquam nunc purus lacus, elit leo elit facilisi.
+              Dignissim amet adipiscing massa integer.</p>
+          </div>
+        </div>
 
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3"> Is any of my personal information stored in the App? </h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3"> What formats can I download my transaction history in? </h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
-        <div class="answer">
-          <p class="h6">Nunc duis id aenean gravida tincidunt eu, tempor
-            ullamcorper. Viverra aliquam arcu, viverra et,
-            cursus. Aliquet pretium cursus adipiscing gravida
-            et consequat lobortis arcu velit. Nibh pharetra
-            fermentum duis accumsan lectus non. Massa
-            cursus molestie lorem scelerisque pellentesque.
-            Nisi, enim, arcu purus gravida adipiscing euismod
-            montes, duis egestas. Vehicula eu etiam quam
-            tristique tincidunt suspendisse ut consequat.</p>
-          <br>
-          <p class="h6">Ornare senectus fusce dignissim ut. Integer
-            consequat in eu tortor, faucibus et lacinia
-            posuere. Turpis sit viverra lorem suspendisse
-            lacus aliquam auctor vulputate. Quis egestas
-            aliquam nunc purus lacus, elit leo elit facilisi.
-            Dignissim amet adipiscing massa integer.</p>
-        </div>
-      </div>
 
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3"> What formats can I download my transaction history in? </h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3">Can I schedule future transfers?</h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
-        <div class="answer">
-          <p class="h6">Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
 
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3">Can I schedule future transfers?</h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3">When can I use Banking App services? </h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
-        <div class="answer">
-          <p class="h6">Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
 
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3">When can I use Banking App services? </h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3">Can I create my own password that is easy for me to remember? </h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
-        <div class="answer">
-          <p class="h6">Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
 
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3">Can I create my own password that is easy for me to remember? </h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
-        </div>
-        <div class="answer">
-          <p class="h6">Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-
-      <div class="faq">
-        <div class="question">
-          <h3 class="h3"> What happens if I forget or lose my password?</h3>
-          <button class="faq-down-btn">
-            <i class="fa-solid fa-chevron-down"></i>
-          </button>
-        </div>
-        <div class="answer">
-          <p class="h6">Lorem ipsum dolor sit amet.</p>
+        <div class="faq">
+          <div class="question">
+            <h3 class="h3"> What happens if I forget or lose my password?</h3>
+            <button class="faq-down-btn">
+              <i class="fa-solid fa-chevron-down"></i>
+            </button>
+          </div>
+          <div class="answer">
+            <p class="h6">Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
       </div>
 
@@ -454,26 +455,30 @@
       </div>
 
       <div class="contact">
-        <div class="container">
+    <!--     <div class="container"> -->
           <a href="#" class="btn-contact">
             <img src="./images/icons/contact-us-now.svg" alt="Contact us now">
           </a>
-        </div>
-      </div>
+        <!-- </div> -->
+      </div>       
+    </section>
 
 
-      <div class="Subscribe">
+    <section aria-label="subscribe-section" class="subscribe-section">
+
+      <div class="subscribe">
         <div class="sub-bell">
           <img src="./images/icons/subscribe-bell.svg" alt="Subscribe bell" class="bell">
-          <h class="subscribe-text">Subscribe to our newsletter</h>
+          <h2 class="subscribe-text">Subscribe to our newsletter</h2>
         </div>
         <div class="subscribe-form">
           <input class="input-field" type="email" placeholder="Your email" />
           <button class="btn-subscribe">Subscribe</button>
         </div>
+      </div>
 
-        <script src="script.js"></script>
     </section>
+
 
     <section aria-label="footer" class="footer">
       <div class="footer-legal">
@@ -481,10 +486,10 @@
         <p class="footer">Credit MadrasThemes</p>
       </div>
       </div>
+    </section>
 
 
-
-
+  <script src="script.js"></script>
 </body>
 
 </html>
