--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     </div>
 
 
-    <section aria-label="Testimonials" class="testimonials">
+    <section aria-label="Testimonials" class="testimonials-section">
       <div class="heading">
         <h2>Clients are<br> Loving Our App</h2>
       </div>
