--- a/index.html
+++ b/index.html
@@ -467,13 +467,15 @@
     <section aria-label="subscribe-section" class="subscribe-section">
 
       <div class="subscribe">
-        <div class="sub-bell">
-          <img src="./images/icons/subscribe-bell.svg" alt="Subscribe bell" class="bell">
-          <h2 class="subscribe-text">Subscribe to our newsletter</h2>
-        </div>
-        <div class="subscribe-form">
-          <input class="input-field" type="email" placeholder="Your email" />
-          <button class="btn-subscribe">Subscribe</button>
+          <div class="container">
+          <div class="sub-bell">
+            <img src="./images/icons/subscribe-bell.svg" alt="Subscribe bell" class="bell">
+            <h2 class="subscribe-text">Subscribe to our newsletter</h2>
+          </div>
+          <div class="subscribe-form">
+            <input class="input-field" type="email" placeholder="Your email" />
+            <button class="btn-subscribe">Subscribe</button>
+          </div>
         </div>
       </div>
 
