--- a/index.html
+++ b/index.html
@@ -213,11 +213,7 @@
           </div>
         </div>
 
-        <div class="text">
-          <h3 class="h4">Latest transaction history</h3>
-          <p> Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in
-            consectetur condimentum. </p>
-        </div>
+
         <div class="text-mobile">
           <h2 class="transfer"> Transfers to people from<br>
             your contact list</h2>
@@ -232,54 +228,62 @@
             Pellentesque volutpat ligula est. Mattis fermentum, at nec <br>
             lacus.</p>
         </div>
+
+        <div class="text-desktop">
+          <h3 class="h4">Latest transaction history</h3>
+          <p> Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in
+            consectetur condimentum. </p>
+        </div>
+
       </div>
 
 
     </section>
 
     <div class="info-container">
-      <!-- First Section -->
-      <section aria-label="Info" class="info-section">
-        <div class="text-content">
-          <h2 class="h2">Make your money transfer simple and clear</h2>
-          <ul>
-            <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> Banking transactions are free for you</li>
-            <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> No monthly cash commission</li>
-            <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> Manage payments and transactions online</li>
-          </ul>
-          <a href="#" class="button">
-            Learn more
-            <img src="./images/icons/arrow.svg" alt="Arrow icon">
-          </a>
-        </div>
-        <div class="image-content">
-          <img src="./images/money-graph.svg" alt="Graph">
-        </div>
-      </section>
-
-      <!-- Second Section -->
-      <section aria-label="Info" class="info-section">
-        <div class="image-content">
-          <img src="./images/chat-credit-card.svg" alt="Contacts">
-        </div>
-        <div class="text-content">
-          <h2 class="h2">Receive payment from international bank details</h2>
-          <div class="features">
-            <div class="feature">
-              <img src="./images/icons/ugly-credit-card.svg" alt="Icon">
-              <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
-            </div>
-            <div class="feature">
-              <img src="./images/icons/coffee-cup-filled-with-ice.svg" alt="Icon">
-              <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
-            </div>
+      <div class="container">
+        <!-- First Section -->
+        <section aria-label="Info" class="info-section">
+          <div class="text-content">
+            <h2 class="h2">Make your money transfer simple and clear</h2>
+            <ul>
+              <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> Banking transactions are free for you</li>
+              <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> No monthly cash commission</li>
+              <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> Manage payments and transactions online</li>
+            </ul>
+            <a href="#" class="button">
+              Learn more
+              <img src="./images/icons/arrow.svg" alt="Arrow icon">
+            </a>
           </div>
-          <a href="#" class="button">
-            Learn more
-            <img src="./images/icons/arrow.svg" alt="Arrow icon">
-          </a>
-        </div>
-      </section>
+          <div class="image-content">
+            <img src="./images/money-graph.svg" alt="Graph">
+          </div>
+        </section>
+        <!-- Second Section -->
+        <section aria-label="Info" class="info-section">
+          <div class="image-content">
+            <img src="./images/chat-credit-card.svg" alt="Contacts">
+          </div>
+          <div class="text-content">
+            <h2 class="h2">Receive payment from international bank details</h2>
+            <div class="features">
+              <div class="feature">
+                <img src="./images/icons/ugly-credit-card.svg" alt="Icon">
+                <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+              </div>
+              <div class="feature">
+                <img src="./images/icons/coffee-cup-filled-with-ice.svg" alt="Icon">
+                <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+              </div>
+            </div>
+            <a href="#" class="button">
+              Learn more
+              <img src="./images/icons/arrow.svg" alt="Arrow icon">
+            </a>
+          </div>
+        </section>
+      </div>
     </div>
 
 
