--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
 
 
         <div class="text-mobile">
-          <h2 class="transfer"> Transfers to people from<br>
+          <h2 class="h4"> Transfers to people from<br>
             your contact list</h2>
           <p class="mobile-subtext"> Proin volutpat mollis egestas. Nam luctus facilisis
             ultrices. Pellentesque volutpat ligula est. Mattis
             fermentum, at nec lacus</p>
         </div>
         <div class="text-tablet">
-          <h2 class="transfer"> Step 3. Transfers to people from your <br>
+          <h2 class="h4"> Step 3. Transfers to people from your <br>
             contact list</h2>
           <p class="tablet-subtext"> Proin volutpat mollis egestas. Nam luctus facilisis ultrices. <br>
             Pellentesque volutpat ligula est. Mattis fermentum, at nec <br>
@@ -230,7 +230,7 @@
         </div>
 
         <div class="text-desktop">
-          <h3 class="h4">Latest transaction history</h3>
+          <h2 class="h4">Latest transaction history</h2>
           <p> Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in
             consectetur condimentum. </p>
         </div>
