--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="container">
         <!-- First Section -->
         <section aria-label="Info" class="info-section">
-          <div class="text-content">
+          <div class="text-content move-right">
             <h2 class="h2">Make your money transfer simple and clear</h2>
             <ul>
               <li><img src="./images/icons/checkmark.svg" alt="Checkmark"> Banking transactions are free for you</li>
@@ -262,7 +262,7 @@
         </section>
         <!-- Second Section -->
         <section aria-label="Info" class="info-section">
-          <div class="image-content">
+          <div class="image-content feature-2">
             <img src="./images/chat-credit-card.svg" alt="Contacts">
           </div>
           <div class="text-content">
