--- a/index.html
+++ b/index.html
@@ -459,12 +459,12 @@
       </div>
 
       <div class="contact">
-    <!--     <div class="container"> -->
+        <div class="container">
           <a href="#" class="btn-contact">
             <img src="./images/icons/contact-us-now.svg" alt="Contact us now">
           </a>
-        <!-- </div> -->
-      </div>       
+        </div>       
+      </div>
     </section>
 
 
