--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@
     </section>
 
 
-    <section aria-label="footer" class="footer">
+    <section aria-label="footer" class="footer s14">
       <div class="footer-legal">
-        <p class="footer">© 2024 Silicon. All rights reserved. </p>
-        <p class="footer">Credit MadrasThemes</p>
+        <p>© 2024 Silicon. All rights reserved. </p>
+        <p class="breaker">Credit MadrasThemes</p>
       </div>
       </div>
     </section>
