--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
     <section aria-label="FAQ" class="faq-section container">
 
-      <div class=faq-window>
+      <div class="faq-window">
         <h2 class="faq-headline">Any questions? Check out the FAQs</h2>
         <p class="faq-mobile-subtext">Still have unanswered questions and need to get in touch?</p>
       </div>
@@ -389,7 +389,7 @@
             </button>
           </div>
           <div class="answer">
-            <p class="h6">Lorem ipsum dolor sit amet.</p>
+            <p class="h6">Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu, viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis arcu velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes, duis egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</p>
           </div>
         </div>
 
