removed some comments and useless code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 
-<!-- Joakim: added the lightTheme class to the body in order to start up correctly -->
+
 <body class = "lightTheme">
   <nav class="main-nav" aria-label="main navigation">
     <a href="#main" class="skip-link">Skip to main content</a>
@@ -242,7 +242,7 @@
 
     <div class="info-container">
       <div class="container">
-        <!-- First Section -->
+   
         <section aria-label="Info" class="info-section">
           <div class="text-content move-right">
             <h2 class="h2">Make your money transfer simple and clear</h2>
@@ -260,7 +260,7 @@
             <img src="./images/money-graph.svg" alt="Graph">
           </div>
         </section>
-        <!-- Second Section -->
+    
         <section aria-label="Info" class="info-section">
           <div class="image-content feature-2">
             <img src="./images/chat-credit-card.svg" alt="Contacts">
@@ -298,7 +298,7 @@
               <img src="./images/icons/quotes.svg" alt="Quote icon">
             </div>
             <div class="rating">
-              <img src="./images/icons/four-stars.svg" alt="4 stars" class="stars"> <!-- Use star icons here -->
+              <img src="./images/icons/four-stars.svg" alt="4 stars" class="stars"> 
             </div>
             <p class="testi-text">Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere
               rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit
@@ -316,7 +316,7 @@
               <img src="./images/icons/quotes.svg" alt="Quote icon">
             </div>
             <div class="rating">
-              <img src="./images/icons/five-stars.svg" alt="5 stars" class="stars"> <!-- Use star icons here -->
+              <img src="./images/icons/five-stars.svg" alt="5 stars" class="stars"> 
             </div>
             <p class="testi-text">Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl
               bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.
@@ -465,7 +465,7 @@
     <section aria-label="subscribe-section" class="subscribe-section container">
 
       <div class="subscribe">
-  <!--         <div class="container"> -->
+
           <div class="sub-bell">
             <img src="./images/icons/subscribe-bell.svg" alt="Subscribe bell" class="bell">
             <h2 class="subscribe-text">Subscribe to our newsletter<span class="d-text"> to stay informed about latest updates</span></h2>
@@ -474,7 +474,7 @@
             <input class="input-field" type="email" placeholder="Your email" />
             <button class="btn-subscribe">Subscribe</button>
           </div>
-       <!--  </div> -->
+
       </div>
 
     </section>
